crates/weaveffi-cli/tests/snapshots/python_docs_everywhere__README_md.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
<!-- Generated by WeaveFFI [VERSION] from api.yml -->
<!-- DO NOT EDIT. Your changes will be overwritten. -->
<!-- To regenerate: weaveffi generate api.yml -o <out> -->

# docs_everywhere (Python)

Python bindings for the `docs_everywhere` native library, built on `ctypes`.

## Requirements

- Python 3.9 or later
- The native library (`libdocs_everywhere.so`, `libdocs_everywhere.dylib`, or `docs_everywhere.dll`)

## Install

```bash
pip install .
```

## Loading the native library

The bindings load the library from `DOCS_EVERYWHERE_LIBRARY` when it is set (a full path),
then from inside the installed package, then from the system loader's search
path.

## Usage

```python
import docs_everywhere
```

<!-- END README.md -->
