crates/weaveffi-cli/tests/snapshots/python_docs_everywhere__pyproject_toml.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from api.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate api.yml -o <out>

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docs_everywhere"
version = "0.1.0"
description = "Native bindings for docs_everywhere"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["docs_everywhere"]

[tool.setuptools.package-data]
"docs_everywhere" = ["py.typed", "*.pyi", "*.so", "*.dylib", "*.dll"]

# END pyproject.toml
