crates/weaveffi-cli/tests/snapshots/python_docs_everywhere__weaveffi_weaveffi_py.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

"""WeaveFFI Python ctypes bindings (auto-generated)"""
import contextlib
import ctypes
import os
import platform
import struct
from dataclasses import dataclass
from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional


class WeaveFFIError(Exception):
    def __init__(self, code: int, message: str) -> None:
        self.code = code
        self.message = message
        super().__init__(f"({code}) {message}")


class _WeaveFFIErrorStruct(ctypes.Structure):
    _fields_ = [
        ("code", ctypes.c_int32),
        ("message", ctypes.c_char_p),
        ("payload_ptr", ctypes.c_void_p),
        ("payload_len", ctypes.c_size_t),
    ]


def _load_library() -> ctypes.CDLL:
    # An explicit path in WEAVEFFI_LIBRARY wins, so callers can point at a
    # specific build artifact regardless of its file name or location.
    override = os.environ.get("WEAVEFFI_LIBRARY")
    if override:
        return ctypes.CDLL(override)
    system = platform.system()
    if system == "Darwin":
        name = "libweaveffi.dylib"
    elif system == "Windows":
        name = "weaveffi.dll"
    else:
        name = "libweaveffi.so"
    return ctypes.CDLL(name)


_lib = _load_library()
_lib.weaveffi_error_clear.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
_lib.weaveffi_error_clear.restype = None
# Async completion callbacks receive a heap-boxed error the consumer owns;
# weaveffi_error_free releases the message, the payload, and the box.
_lib.weaveffi_error_free.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
_lib.weaveffi_error_free.restype = None
# The free helpers take raw addresses (`c_void_p`) so wrappers can release
# owned producer allocations they hold as plain integers or typed pointers.
_lib.weaveffi_free_string.argtypes = [ctypes.c_void_p]
_lib.weaveffi_free_string.restype = None
_lib.weaveffi_free_bytes.argtypes = [ctypes.c_void_p, ctypes.c_size_t]
_lib.weaveffi_free_bytes.restype = None


def _check_error(err: _WeaveFFIErrorStruct) -> None:
    if err.code != 0:
        code = err.code
        message = err.message.decode("utf-8") if err.message else ""
        _lib.weaveffi_error_clear(ctypes.byref(err))
        raise WeaveFFIError(code, message)


class _PointerGuard(contextlib.AbstractContextManager):
    def __init__(self, ptr, free_fn) -> None:
        self.ptr = ptr
        self._free_fn = free_fn

    def __exit__(self, *exc) -> bool:
        if self.ptr is not None:
            self._free_fn(self.ptr)
            self.ptr = None
        return False


def _string_to_bytes(s: Optional[str]) -> Optional[bytes]:
    if s is None:
        return None
    return s.encode("utf-8")


def _bytes_to_string(ptr) -> Optional[str]:
    if ptr is None:
        return None
    return ptr.decode("utf-8")


def _take_string(ptr) -> Optional[str]:
    """Copy an owned C string (a raw address) and free the producer buffer."""
    if not ptr:
        return None
    _s = ctypes.string_at(ptr).decode("utf-8")
    _lib.weaveffi_free_string(ptr)
    return _s


class _BufferWriter:
    """Encodes values into the WeaveFFI value-buffer wire format:
    little-endian, packed, no alignment."""

    def __init__(self) -> None:
        self._buf = bytearray()

    def finish(self) -> bytes:
        return bytes(self._buf)

    def write_bool(self, v) -> None:
        self._buf.append(1 if v else 0)

    def write_i8(self, v: int) -> None:
        self._buf += struct.pack("<b", v)

    def write_u8(self, v: int) -> None:
        self._buf += struct.pack("<B", v)

    def write_i16(self, v: int) -> None:
        self._buf += struct.pack("<h", v)

    def write_u16(self, v: int) -> None:
        self._buf += struct.pack("<H", v)

    def write_i32(self, v: int) -> None:
        self._buf += struct.pack("<i", v)

    def write_u32(self, v: int) -> None:
        self._buf += struct.pack("<I", v)

    def write_i64(self, v: int) -> None:
        self._buf += struct.pack("<q", v)

    def write_u64(self, v: int) -> None:
        self._buf += struct.pack("<Q", v)

    def write_f32(self, v: float) -> None:
        self._buf += struct.pack("<f", v)

    def write_f64(self, v: float) -> None:
        self._buf += struct.pack("<d", v)

    def write_len(self, n: int) -> None:
        self._buf += struct.pack("<I", n)

    def write_option_flag(self, present) -> None:
        self._buf.append(1 if present else 0)

    def write_string(self, v: str) -> None:
        _b = v.encode("utf-8")
        self.write_len(len(_b))
        self._buf += _b

    def write_bytes(self, v: bytes) -> None:
        self.write_len(len(v))
        self._buf += bytes(v)


class _BufferReader:
    """Decodes values from the WeaveFFI value-buffer wire format, rejecting
    truncated buffers, invalid flag bytes, invalid UTF-8, and oversized
    length prefixes."""

    def __init__(self, data: bytes) -> None:
        self._data = memoryview(data)
        self._pos = 0

    def _take(self, n: int, what: str) -> memoryview:
        if len(self._data) - self._pos < n:
            raise WeaveFFIError(-1, f"malformed value buffer: truncated {what}")
        _view = self._data[self._pos:self._pos + n]
        self._pos += n
        return _view

    def read_bool(self) -> bool:
        _b = self._take(1, "bool")[0]
        if _b > 1:
            raise WeaveFFIError(-1, "malformed value buffer: invalid bool byte")
        return _b == 1

    def read_i8(self) -> int:
        return struct.unpack("<b", self._take(1, "i8"))[0]

    def read_u8(self) -> int:
        return struct.unpack("<B", self._take(1, "u8"))[0]

    def read_i16(self) -> int:
        return struct.unpack("<h", self._take(2, "i16"))[0]

    def read_u16(self) -> int:
        return struct.unpack("<H", self._take(2, "u16"))[0]

    def read_i32(self) -> int:
        return struct.unpack("<i", self._take(4, "i32"))[0]

    def read_u32(self) -> int:
        return struct.unpack("<I", self._take(4, "u32"))[0]

    def read_i64(self) -> int:
        return struct.unpack("<q", self._take(8, "i64"))[0]

    def read_u64(self) -> int:
        return struct.unpack("<Q", self._take(8, "u64"))[0]

    def read_f32(self) -> float:
        return struct.unpack("<f", self._take(4, "f32"))[0]

    def read_f64(self) -> float:
        return struct.unpack("<d", self._take(8, "f64"))[0]

    def read_len(self) -> int:
        _n = struct.unpack("<I", self._take(4, "length prefix"))[0]
        if _n > len(self._data) - self._pos:
            raise WeaveFFIError(
                -1, "malformed value buffer: length prefix exceeds remaining bytes"
            )
        return _n

    def read_option_flag(self) -> bool:
        _b = self._take(1, "option flag")[0]
        if _b > 1:
            raise WeaveFFIError(-1, "malformed value buffer: invalid option flag")
        return _b == 1

    def read_string(self) -> str:
        _n = self.read_len()
        try:
            return str(self._take(_n, "string data"), "utf-8")
        except UnicodeDecodeError as _e:
            raise WeaveFFIError(
                -1, "malformed value buffer: string is not valid UTF-8"
            ) from _e

    def read_bytes(self) -> bytes:
        _n = self.read_len()
        return bytes(self._take(_n, "bytes data"))

    def expect_end(self) -> None:
        if self._pos != len(self._data):
            raise WeaveFFIError(-1, "malformed value buffer: trailing bytes")


def _decode_buffer(data: bytes, read_fn):
    """Decode exactly one value from `data` using `read_fn(reader)`."""
    _r = _BufferReader(data)
    _v = read_fn(_r)
    _r.expect_end()
    return _v


def _take_buffer(ptr, length) -> bytes:
    """Copy an owned value buffer (a raw address) and release it with
    weaveffi_free_bytes."""
    if not ptr:
        return b""
    _data = ctypes.string_at(ptr, length) if length else b""
    _lib.weaveffi_free_bytes(ptr, ctypes.c_size_t(length))
    return _data

import asyncio
import threading


# Pending async completion trampolines, keyed by an integer token.
# Holding the ctypes function objects here keeps them alive until the
# producer fires the completion callback, even when the awaiting
# coroutine has been cancelled; each entry is removed on completion.
_async_pending: Dict[int, object] = {}
_async_lock = threading.Lock()
_async_next_token = 0


def _async_register(cb) -> int:
    global _async_next_token
    with _async_lock:
        _async_next_token += 1
        _token = _async_next_token
        _async_pending[_token] = cb
    return _token


# Registered listener trampolines, keyed by subscription id. Holding
# the ctypes function objects here keeps them alive until unregistered;
# without this the GC could collect a trampoline the producer still calls.
_listener_refs: Dict[int, object] = {}


# === Module: docs ===

class DocsErrorsError(WeaveFFIError):
    """Base exception for the `docs` module's error domain."""


class NotFound(DocsErrorsError):
    """Returned when no document matches the requested id"""

    CODE = 1

    def __init__(self, message: str = "Document not found") -> None:
        super().__init__(1, message)


class InvalidStatus(DocsErrorsError):
    """Raised when attempting to move into a forbidden state"""

    CODE = 2

    def __init__(self, message: str = "Invalid status transition") -> None:
        super().__init__(2, message)


DocsErrorsError.NotFound = NotFound
DocsErrorsError.InvalidStatus = InvalidStatus


_DOCS_ERRORS_ERROR_CODES: Dict[int, type] = {
    1: NotFound,
    2: InvalidStatus,
}


def _docs_errors_error_from(code: int, message: str, payload: bytes = b"") -> WeaveFFIError:
    """Build the DocsErrorsError subclass matching `code`, or a generic
    WeaveFFIError for codes outside the domain (panics, marshalling)."""
    _cls = _DOCS_ERRORS_ERROR_CODES.get(code)
    if _cls is None:
        return WeaveFFIError(code, message)
    _exc = _cls(message) if message else _cls()
    return _exc


def _check_docs_errors_error(err: _WeaveFFIErrorStruct) -> None:
    if err.code != 0:
        code = err.code
        message = err.message.decode("utf-8") if err.message else ""
        payload = ctypes.string_at(err.payload_ptr, err.payload_len) if err.payload_ptr else b""
        _lib.weaveffi_error_clear(ctypes.byref(err))
        raise _docs_errors_error_from(code, message, payload)


class Status(IntEnum):
    """
    Lifecycle status of a document.

    Used to drive UI badges and filters.
    """
    # Document is being edited
    Draft = 0
    # Document is publicly visible
    Published = 1
    # Document is hidden from listings
    Archived = 2


@dataclass
class Document:
    """
    Represents a single document tracked by the system.

    Documents are persisted to disk and exposed via the public API.
    """

    # Stable opaque identifier
    id: int
    # Human-readable title shown in lists
    title: str
    # Current lifecycle status
    status: "Status"
    # Free-form tags for grouping
    tags: List[str]


def _write_Document(_w: _BufferWriter, value: "Document") -> None:
    _w.write_i64(value.id)
    _w.write_string(value.title)
    _w.write_i32(value.status)
    _w.write_len(len(value.tags))
    for _e0 in value.tags:
        _w.write_string(_e0)


def _read_Document(_r: _BufferReader) -> "Document":
    return Document(
        id=_r.read_i64(),
        title=_r.read_string(),
        status=Status(_r.read_i32()),
        tags=[_r.read_string() for _i0 in range(_r.read_len())],
    )


def _pack_Document(value: "Document") -> bytes:
    _w = _BufferWriter()
    _write_Document(_w, value)
    return _w.finish()


def _unpack_Document(data: bytes) -> "Document":
    return _decode_buffer(data, _read_Document)


class Notebook:
    """
    An ordered collection of documents.

    Notebooks own their documents and release them when destroyed.
    """

    @classmethod
    def _from_ptr(cls, ptr) -> "Notebook":
        _obj = cls.__new__(cls)
        _obj._ptr = ptr
        return _obj

    def __init__(self) -> None:
        """Create an empty notebook
        """
        self._ptr = None
        _fn = _lib.weaveffi_docs_Notebook_new
        _fn.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
        _fn.restype = ctypes.c_void_p
        _err = _WeaveFFIErrorStruct()
        _result = _fn(ctypes.byref(_err))
        _check_error(_err)
        if _result is None:
            raise WeaveFFIError(-1, "null pointer")
        self._ptr = _result


    def __del__(self) -> None:
        if self._ptr is not None:
            _lib.weaveffi_docs_Notebook_destroy.argtypes = [ctypes.c_void_p]
            _lib.weaveffi_docs_Notebook_destroy.restype = None
            _lib.weaveffi_docs_Notebook_destroy(self._ptr)
            self._ptr = None

    def insert(self, document: "Document") -> int:
        """Add a document, returning its position in the notebook

        Parameters
        ----------
        document : The document to add
        """
        _fn = _lib.weaveffi_docs_Notebook_insert
        _fn.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_size_t, ctypes.POINTER(_WeaveFFIErrorStruct)]
        _fn.restype = ctypes.c_int32
        _document_buf = _pack_Document(document)
        _err = _WeaveFFIErrorStruct()
        _result = _fn(self._ptr, _document_buf, len(_document_buf), ctypes.byref(_err))
        _check_error(_err)
        return _result


    def find(self, id: int) -> "Document":
        """Look up a document by identifier, failing when none matches

        Parameters
        ----------
        id : Identifier of the document to find

        Raises
        ------
        DocsErrorsError
            If the call reports one of the domain's error codes.
        """
        _fn = _lib.weaveffi_docs_Notebook_find
        _fn.argtypes = [ctypes.c_void_p, ctypes.c_int64, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
        _fn.restype = ctypes.c_void_p
        _err = _WeaveFFIErrorStruct()
        _out_len = ctypes.c_size_t(0)
        _result = _fn(self._ptr, id, ctypes.byref(_out_len), ctypes.byref(_err))
        _check_docs_errors_error(_err)
        _data = _take_buffer(_result, _out_len.value)
        return _unpack_Document(_data)


    def size(self) -> int:
        """The number of documents currently held
        """
        _fn = _lib.weaveffi_docs_Notebook_size
        _fn.argtypes = [ctypes.c_void_p, ctypes.POINTER(_WeaveFFIErrorStruct)]
        _fn.restype = ctypes.c_int32
        _err = _WeaveFFIErrorStruct()
        _result = _fn(self._ptr, ctypes.byref(_err))
        _check_error(_err)
        return _result


    @staticmethod
    def max_documents() -> int:
        """The largest number of documents one notebook will hold
        """
        _fn = _lib.weaveffi_docs_Notebook_max_documents
        _fn.argtypes = [ctypes.POINTER(_WeaveFFIErrorStruct)]
        _fn.restype = ctypes.c_int32
        _err = _WeaveFFIErrorStruct()
        _result = _fn(ctypes.byref(_err))
        _check_error(_err)
        return _result



# Fires after a document has been persisted successfully
# Callback type OnSaved: Callable[[int, int], None]
_CFUNC_weaveffi_docs_OnSaved_fn = ctypes.CFUNCTYPE(None, ctypes.c_int64, ctypes.c_int32, ctypes.c_void_p)


def register_saved_listener(callback: Callable[[int, int], None]) -> int:
    """
    Subscribe to document-saved notifications

    Returns a subscription id for unregister_saved_listener().
    """
    def _trampoline(doc_id, revision, _context):
        callback(doc_id, revision)
    _cfunc = _CFUNC_weaveffi_docs_OnSaved_fn(_trampoline)
    _fn = _lib.weaveffi_docs_register_saved_listener
    _fn.argtypes = [_CFUNC_weaveffi_docs_OnSaved_fn, ctypes.c_void_p]
    _fn.restype = ctypes.c_uint64
    _listener_id = int(_fn(_cfunc, None))
    _listener_refs[_listener_id] = _cfunc
    return _listener_id


def unregister_saved_listener(listener_id: int) -> None:
    """Unregister a listener previously registered with register_saved_listener()."""
    _fn = _lib.weaveffi_docs_unregister_saved_listener
    _fn.argtypes = [ctypes.c_uint64]
    _fn.restype = None
    _fn(ctypes.c_uint64(listener_id))
    _listener_refs.pop(listener_id, None)


def create_document(title: str, tags: List[str]) -> "Document":
    """
    Create a brand new document.

    The document starts in `Draft` status; callers must publish
    it explicitly to make it visible.

    Parameters
    ----------
    title : Human-readable title for the new document
    tags : Initial set of tags (may be empty)
    """
    _fn = _lib.weaveffi_docs_create_document
    _fn.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_size_t, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _tags_w = _BufferWriter()
    _tags_w.write_len(len(tags))
    for _e0 in tags:
        _tags_w.write_string(_e0)
    _tags_buf = _tags_w.finish()
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(_string_to_bytes(title), _tags_buf, len(_tags_buf), ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _unpack_Document(_data)


def get_document(id: int) -> Optional["Document"]:
    """Look up a document by identifier

    Parameters
    ----------
    id : Identifier returned from create_document
    """
    _fn = _lib.weaveffi_docs_get_document
    _fn.argtypes = [ctypes.c_int64, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveFFIErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveFFIErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(id, ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    _data = _take_buffer(_result, _out_len.value)
    return _decode_buffer(_data, lambda _r: (_read_Document(_r) if _r.read_option_flag() else None))


async def publish_async(id: int) -> bool:
    """Publish a document in the background

    Parameters
    ----------
    id : Identifier of the document to publish
    """
    _fn = _lib.weaveffi_docs_publish_async_async
    _loop = asyncio.get_running_loop()
    _fut = _loop.create_future()

    def _cb_impl(context, err, result):
        # Fires exactly once, on a producer thread: take ownership of
        # the result here, then hop back to the event loop.
        _state = {"err": None, "val": None}
        if err and err.contents.code != 0:
            _code = err.contents.code
            _msg = err.contents.message.decode("utf-8") if err.contents.message else ""
            _lib.weaveffi_error_free(err)
            _state["err"] = WeaveFFIError(_code, _msg)
        else:
            try:
                _state["val"] = bool(result)
            except Exception as _exc:
                _state["err"] = _exc

        def _resolve():
            _async_pending.pop(_token, None)
            # A cancelled future must not be resolved.
            if _fut.cancelled():
                return
            if _state["err"] is not None:
                _fut.set_exception(_state["err"])
            else:
                _fut.set_result(_state["val"])

        _loop.call_soon_threadsafe(_resolve)

    _cb_type = ctypes.CFUNCTYPE(None, ctypes.c_void_p, ctypes.POINTER(_WeaveFFIErrorStruct), ctypes.c_int32)
    _cb = _cb_type(_cb_impl)
    _token = _async_register(_cb)  # pinned until completion
    _fn.argtypes = [ctypes.c_int64, _cb_type, ctypes.c_void_p]
    _fn.restype = None
    _fn(id, _cb, None)
    return await _fut

# END weaveffi.py
