crates/weaveffi-cli/tests/snapshots/python_docs_everywhere__weaveffi_weaveffi_pyi.snap
---
source: crates/weaveffi-cli/tests/snapshots.rs
---
# Generated by WeaveFFI [VERSION] from weaveffi.yml
# DO NOT EDIT. Your changes will be overwritten.
# To regenerate: weaveffi generate weaveffi.yml -o <out>

from abc import ABC, abstractmethod
from enum import IntEnum
from typing import Callable, Dict, Iterator, List, Optional, Type

class WeaveFFIError(Exception):
    GENERIC_ERROR_CODE: int
    PANIC_ERROR_CODE: int
    MARSHAL_ERROR_CODE: int
    FOREIGN_ERROR_CODE: int
    code: int
    message: str
    def __init__(self, code: int, message: str) -> None: ...

class DocsErrorsError(WeaveFFIError):
    NotFound: Type["NotFound"]
    InvalidStatus: Type["InvalidStatus"]
    def __init__(self, code: int, message: str) -> None: ...

# Returned when no document matches the requested id
class NotFound(DocsErrorsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

# Raised when attempting to move into a forbidden state
class InvalidStatus(DocsErrorsError):
    CODE: int
    def __init__(self, message: str = ...) -> None: ...

# Lifecycle status of a document.
#
# Used to drive UI badges and filters.
class Status(IntEnum):
    # Document is being edited
    Draft: int
    # Document is publicly visible
    Published: int
    # Document is hidden from listings
    Archived: int

# Represents a single document tracked by the system.
#
# Documents are persisted to disk and exposed via the public API.
class Document:
    # Stable opaque identifier
    id: int
    # Human-readable title shown in lists
    title: str
    # Current lifecycle status
    status: "Status"
    # Free-form tags for grouping
    tags: List[str]
    def __init__(self, id: int, title: str, status: "Status", tags: List[str]) -> None: ...

# Consumer-implemented observer of document-saved notifications.
#
# Implementations must be safe to call from any thread.
class SavedListener(ABC):
    # Fires after a document has been persisted successfully
    @abstractmethod
    def on_saved(self, doc_id: int, revision: int) -> None: ...

# An ordered collection of documents.
#
# Notebooks own their documents and release them when destroyed.
class Notebook:
    def __init__(self) -> None: ...
    def close(self) -> None: ...
    def __enter__(self) -> "Notebook": ...
    def __exit__(self, *exc: object) -> bool: ...
    def insert(self, document: "Document") -> int: ...
    def find(self, id: int) -> "Document": ...
    def size(self) -> int: ...
    @staticmethod
    def max_documents() -> int: ...

# Create a brand new document.
#
# The document starts in `Draft` status; callers must publish
# it explicitly to make it visible.
def create_document(title: str, tags: List[str]) -> "Document": ...

# Look up a document by identifier
def get_document(id: int) -> Optional["Document"]: ...

# Publish a document in the background
async def publish_async(id: int) -> bool: ...

# Register a listener for saved notifications
def watch(listener: "SavedListener") -> None: ...

# END weaveffi.pyi
